src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  font-family: "Sulphur Point", Inter, system-ui, Avenir, Helvetica, Arial,
    sans-serif;
  line-height: 1.5;
  font-weight: 400;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
}

h1 {
  font-size: 6em;
  font-weight: 700;
}

h2,
h3 {
  font-size: 4.2em;
  font-weight: 700;
}

h1 mark::before,
h2 mark::before,
h3 mark::before {
  content: "[";
}

h1 mark::after,
h2 mark::after,
h3 mark::after {
  content: "]";
}

h1 mark,
h3 mark {
  background-color: #999999;
}

h2 mark {
  background-color: #1d1d1d;
}

mark {
  color: white;
  padding: 10px;
}

button {
  border: 1px solid transparent;
  padding: 6px;
  font-size: 20px;
  font-family: inherit;
  cursor: pointer;
}

#toggle-light p {
  border-radius: 100px;
  border: 2px solid white;
  padding: 5px 20px;
  margin-left: -30px;
  color: black;
  background-color: white;
}

#toggle-dark p {
  border-radius: 100px;
  border: 2px solid white;
  padding: 5px 20px;
  margin-right: -30px;
  color: white;
  background-color: black;
}

#toggle-light img,
#toggle-dark img {
  z-index: 1001;
}

header {
  z-index: 1000;
}

header nav ul li {
  display: flex;
  padding: 10px;
  align-items: center;
}

header nav ul li:hover img,
header nav .active img {
  transform: rotate(20deg);
  transition: 0.5s;
}

header nav ul li {
  font-size: 2em;
  color: white;
}

header nav ul li:hover p,
header nav .active p {
  border-bottom: 2px dashed white;
}

#toggle {
  margin-left: auto;
}

.laptopGirl {
  height: 90vh;
}

#me {
  background: url("/backgrounds/graph.png") no-repeat center center;
  background-size: cover;
  padding: 50px 0;
  height: 100vh;
}

#me-content {
  max-width: 1200px;
  margin: 0 auto;
}

#me-images {
  position: relative;
}

#me-images img {
  position: absolute;
  border-radius: 60px;
  bottom: 65%;
  left: -15px;
}

.parallax {
  background: url("/images/parallax.jpg") no-repeat center center;
  min-height: 300px;
  background-attachment: fixed;
  background-size: cover;
}

#skills {
  background: url("/backgrounds/topography.jpg") no-repeat center center;
  background-size: cover;
  padding: 150px 0;
}

#skills-content {
  max-width: 1200px;
  margin: 0 auto;
}

#skills-content p {
  font-size: 2em;
  line-height: 1.2;
  color: white;
}

.skill-container img {
  position: relative;
  z-index: 1;
  height: 220px;
  margin: 0 auto;
}

@keyframes move {
  0% {
    border-radius: 37% 63% 70% 30% / 45% 45% 55% 55%;
  }
  10% {
    border-radius: 45% 55% 54% 46% / 45% 38% 62% 55%;
  }
  20% {
    border-radius: 59% 41% 67% 33% / 45% 31% 69% 55%;
  }
  30% {
    border-radius: 44% 56% 60% 40% / 33% 59% 41% 67%;
  }
  40% {
    border-radius: 52% 48% 41% 59% / 53% 63% 37% 47%;
  }
  50% {
    border-radius: 65% 35% 52% 48% / 43% 39% 61% 57%;
  }
  60% {
    border-radius: 42% 58% 58% 42% / 34% 62% 38% 66%;
  }
  70% {
    border-radius: 66% 34% 61% 39% / 43% 72% 28% 57%;
  }
  80% {
    border-radius: 28% 72% 41% 59% / 63% 63% 37% 37%;
  }
  90% {
    border-radius: 54% 46% 55% 45% / 64% 49% 51% 36%;
  }
  100% {
    border-radius: 37% 63% 70% 30% / 45% 45% 55% 55%;
  }
}

.skill-label {
  border-radius: 200px;
  padding: 20px 0;
  margin-top: -46px;
  animation: move 5s infinite;
}

#skill-pink {
  background-color: #e77b83;
  position: relative;
}

#skill-pink::after {
  content: "";
  border: 4px dashed #b94a52;
  height: 100%;
  width: 100%;
  position: absolute;
  top: -10px;
  left: 20px;
  border-radius: 200px;
  animation: move 8s infinite;
}

#skill-green {
  background-color: #8da960;
  position: relative;
}

#skill-green::after {
  content: "";
  border: 4px dashed #557226;
  height: 100%;
  width: 100%;
  position: absolute;
  top: -10px;
  left: 20px;
  border-radius: 200px;
  animation: move 8s infinite;
}

#skill-gray {
  background-color: #414040;
  position: relative;
  min-height: 100px;
}

#skill-gray::after {
  content: "";
  border: 4px dashed #000000;
  height: 100%;
  width: 100%;
  position: absolute;
  top: -10px;
  left: 20px;
  border-radius: 200px;
  animation: move 8s infinite;
}

.ipadGirl {
  height: 860px;
}

#projects {
  padding: 120px 0;
}

#project-content {
  max-width: 1400px;
  margin: 0 auto;
}

#project-images img {
  margin: 0 auto;
}

.parallaxB {
  background: url("/images/parallaxB.JPG") no-repeat center center;
  min-height: 300px;
  background-attachment: fixed;
  background-size: cover;
}

.pencilGirl {
  height: 880px;
}

#about {
  background: url("/backgrounds/lines.png") no-repeat center center;
  background-size: cover;
  padding: 120px 0;
}

#about-content {
  max-width: 1400px;
  margin: 0 auto;
}

#more-info {
  max-width: 1200px;
  margin: 0 auto;
}

#more-info img {
  height: 400px;
}

#footer {
  background-color: #121212;
  color: white;
  font-size: 1.4em;
  line-height: 1.2;
  padding: 20px 40px;
}

#links a {
  padding: 10px;
  border-radius: 50px;
}

.project-info {
  max-width: 1200px;
  margin: 0 auto;
}

.project-text p,
.project-info p {
  font-size: 1.4em;
}

.project-info a,
.article-text a {
  padding: 10px;
  border-radius: 50px;
  line-height: 3;
}

.project-logo {
  max-height: 120px;
  margin: 0 auto;
}

.project-img {
  max-width: 600px;
  border-radius: 100px;
}

#drawings-gallery,
#toy-gallery {
  max-width: 1200px;
  margin: 0 auto;
}

#drawings-gallery img,
#toy-gallery img {
  border-radius: 50px;
}

.article-content {
  padding: 20px;
  max-width: 750px;
  margin: 0 auto;
  border-radius: 80px;
}

.article-title {
  font-weight: 700;
  font-size: 1.8em !important;
  line-height: 1.2;
}

#bottomNav header nav ul li {
  padding: 5px;
}

@media screen and (max-width: 1280px) {
  #me,
  #skills,
  #projects,
  #about {
    padding-left: 40px;
    padding-right: 40px;
  }

  .skill-label {
    max-width: 400px;
    margin: -40px auto 0;
  }
}

@media screen and (max-width: 1024px) {
  #toggle-light p,
  #toggle-dark p {
    padding: 5px 14px;
  }

  #toggle-light p {
    border: 2px solid black;
  }

  #drawings-gallery,
  #toy-gallery,
  .article-text {
    max-width: 800px;
    margin: 0 auto;
  }

  #skills p,
  #projects p,
  #about p,
  #about-content li {
    font-size: 1.2em !important;
  }

  #skills h2,
  #projects h2,
  #projects h3,
  #about h2 {
    font-size: 3em !important;
  }

  #footer {
    font-size: 1em;
    padding: 10px;
  }

  #footer img {
    max-width: 60px;
  }

  #skill-gray {
    min-height: 50px;
  }

  .parallax,
  .parallaxB {
    background-attachment: scroll;
  }
}

@media screen and (max-width: 800px) {
  .skill-container img {
    height: 140px;
  }

  #skills,
  #projects,
  #about {
    padding-top: 80px;
  }

  .laptopGirl,
  .ipadGirl,
  .pencilGirl {
    height: 600px;
  }

  .parallax,
  .parallaxB {
    min-height: 150px;
  }
}

@media screen and (max-width: 600px) {
  .laptopGirl,
  .ipadGirl,
  .pencilGirl {
    height: 400px;
  }

  #me,
  #skills,
  #projects,
  #about {
    padding-left: 15px;
    padding-right: 15px;
  }

  #toggle-light p,
  #toggle-dark p {
    font-size: 16px;
  }

  .subtitle {
    font-size: 1.4em;
  }

  #skills p,
  #projects p,
  #about p,
  #about-content li {
    font-size: 1.2em !important;
    line-height: 1.2;
  }

  #me h1 {
    font-size: 3em !important;
  }

  .project-img {
    max-width: 300px;
    border-radius: 40px;
  }

  .project-info a,
  .article-text a,
  #links a {
    line-height: 2.8;
  }

  #skills h2,
  #projects h2,
  #projects h3,
  #about h2 {
    font-size: 2.6em !important;
  }

  .project-img {
    max-width: 400px;
    border-radius: 40px;
  }
}

@media screen and (max-width: 500px) {
  .project-img {
    max-width: 300px;
    width: 100%;
    border-radius: 40px;
  }
}

